--- a/public/about.html
+++ b/public/about.html
@@ -152,10 +152,10 @@
       </nav>
     </header>
 
-    <main class="container__md">
-      <section class="article-grid">
+    <main class="layout layout__small layout-grid">
+      <section class="layout-grid">
         <article>
-          <h1>
+          <h1 class="page-title">
             Karaoke Nite is a social app. Our north star is to create the
             next-gen
             <span class="orange">h</span><span class="pink__light">o</span
@@ -181,7 +181,7 @@
           </p>
         </article>
         <article>
-          <h2>Beta v0.1.3</h2>
+          <h2 class="page-subtitle">Beta v0.1.3</h2>
 
           <p>We are a small team of friends based in Brooklyn, NY.</p>
 
@@ -205,7 +205,7 @@
         </article>
 
         <article>
-          <h2>Record Labels & Artists</h2>
+          <h2 class="page-subtitle">Record Labels & Artists</h2>
           <p>
             If you are a indie record label or band/artist that's interested in
             having your music videos or lyric videos be featured in the app,
@@ -214,7 +214,7 @@
           </p>
         </article>
         <article>
-          <h2>Legal</h2>
+          <h2 class="page-subtitle">Legal</h2>
 
           <p>
             The Beta was soft launched in Q4 2020 with 50 karaoke soundtracks
@@ -235,13 +235,13 @@
           </p>
         </article>
       </section>
+      <section>
+        <blockquote>
+          "Karaoke is probably the only correct use case for VR." Jenn Schiffer,
+          Glitch
+        </blockquote>
+      </section>
     </main>
-    <aside class="section--callout">
-      <blockquote>
-        "Karaoke is probably the only correct use case for VR." Jenn Schiffer,
-        Glitch
-      </blockquote>
-    </aside>
     <!-- New Footer (Sonny) -->
     <footer class="footer">
       <div class="footer-container">
