--- a/public/blog.html
+++ b/public/blog.html
@@ -152,11 +152,11 @@
       </nav>
     </header>
 
-    <main class="container__md">
-      <div class="article-grid">
+    <main class="layout layout__small layout-grid">
+      <section class="layout-grid">
         <article>
           <h4>April 7th, 2021</h4>
-          <h2>💨 v0.2 Update Coming Soon</h2>
+          <h2 class="page-subtitle">💨 v0.2 Update Coming Soon</h2>
 
           <p>
             We just released the most recent build v0.1.3 which includes a FAQ
@@ -180,7 +180,7 @@
         </article>
         <article>
           <h4>March 20th, 2021</h4>
-          <h2>🚀 Product Hunt and 2,500 Users</h2>
+          <h2 class="page-subtitle">🚀 Product Hunt and 2,500 Users</h2>
 
           <p>
             March has been an absolutely crazy month for us.
@@ -216,7 +216,7 @@
 
         <article>
           <h4>March 5th, 2021</h4>
-          <h2>📝 User Research Wrap-Up</h2>
+          <h2 class="page-subtitle">📝 User Research Wrap-Up</h2>
 
           <p>
             After chatting with 40 users from around the world and testing it
@@ -304,7 +304,7 @@
 
         <article>
           <h4>February 28th, 2021</h4>
-          <h2>👯‍♂️ #DreamTeam</h2>
+          <h2 class="page-subtitle">👯‍♂️ #DreamTeam</h2>
 
           <p>
             The journey of finding product-market fit isn't easy. Just wanted to
@@ -388,53 +388,56 @@
             for all the debugging help! 🔎
           </p>
         </article>
-      </div>
-      <aside>
-        <h4>Release Build v0.1.3</h4>
-        <ul class="emojilist">
-          <li class="emojilist-item">🆕 Added a /faq page.</li>
-          <li class="emojilist-item">🏗 Updated /about page.</li>
-          <li class="emojilist-item">
-            🏗 Cleaned up the codebase in preparation of v0.2.
-          </li>
-          <li class="emojilist-item">💸 Compiled the pre-seed pitch deck.</li>
-        </ul>
-
-        <h4>Release Build v0.1.2</h4>
-        <ul class="emojilist">
-          <li class="emojilist-item">
-            🆕 Added a Privacy Policy. Thanks, Min-Kyu!
-          </li>
-          <li class="emojilist-item">🆕 Added demo video.</li>
-          <li class="emojilist-item">🆕 Added release notes.</li>
-          <li class="emojilist-item">🆕 Added blog posts.</li>
-          <li class="emojilist-item">🏗 Removed Patreon links.</li>
-          <li class="emojilist-item">
-            🐛 Fixed the "Let's Get It On" autoplay bug.
-          </li>
-        </ul>
-
-        <h4>Release Build v0.1.1</h4>
-        <ul class="emojilist">
-          <li class="emojilist-item">
-            🆕 Added floating animation to the stars on the landing page.
-          </li>
-          <li class="emojilist-item">
-            🆕 Added hover effects to anchor links.
-          </li>
-          <li class="emojilist-item">🆕 Added a /blog page.</li>
-          <li class="emojilist-item">
-            🐛 Fixed social channel links bug in the footer.
-          </li>
-        </ul>
-      </aside>
-      <section class="section--callout">
+      </section>
+      <section class="layout-grid layout-grid__sm">
+        <article>
+          <h4>Release Build v0.1.3</h4>
+          <ul class="emojilist">
+            <li class="emojilist-item">🆕 Added a /faq page.</li>
+            <li class="emojilist-item">🏗 Updated /about page.</li>
+            <li class="emojilist-item">
+              🏗 Cleaned up the codebase in preparation of v0.2.
+            </li>
+            <li class="emojilist-item">💸 Compiled the pre-seed pitch deck.</li>
+          </ul>
+        </article>
+        <article>
+          <h4>Release Build v0.1.2</h4>
+          <ul class="emojilist">
+            <li class="emojilist-item">
+              🆕 Added a Privacy Policy. Thanks, Min-Kyu!
+            </li>
+            <li class="emojilist-item">🆕 Added demo video.</li>
+            <li class="emojilist-item">🆕 Added release notes.</li>
+            <li class="emojilist-item">🆕 Added blog posts.</li>
+            <li class="emojilist-item">🏗 Removed Patreon links.</li>
+            <li class="emojilist-item">
+              🐛 Fixed the "Let's Get It On" autoplay bug.
+            </li>
+          </ul>
+        </article>
+        <article>
+          <h4>Release Build v0.1.1</h4>
+          <ul class="emojilist">
+            <li class="emojilist-item">
+              🆕 Added floating animation to the stars on the landing page.
+            </li>
+            <li class="emojilist-item">
+              🆕 Added hover effects to anchor links.
+            </li>
+            <li class="emojilist-item">🆕 Added a /blog page.</li>
+            <li class="emojilist-item">
+              🐛 Fixed social channel links bug in the footer.
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section>
         <blockquote>
           "Just might want to warn your roommate first." Product Hunt
         </blockquote>
       </section>
     </main>
-
     <!-- New Footer (Sonny) -->
     <footer class="footer">
       <div class="footer-container">
