--- a/public/faq.html
+++ b/public/faq.html
@@ -152,9 +152,9 @@
       </nav>
     </header>
 
-    <main class="container__md container__spaced">
-      <h1>💬 Frequently Asked Questions</h1>
-      <div class="collapse">
+    <main class="layout layout__small layout-grid layout-grid__sm">
+      <h1 class="page-subtitle">💬 Frequently Asked Questions</h1>
+      <section class="layout-grid layout-grid__sm collapse">
         <div class="collapse-area">
           <button type="button" class="collapse-button collapsible">
             Do I need a microphone for Karaoke Nite?
@@ -303,13 +303,13 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div>
+      </section>
+      <section>
         <p>
           Let us know if you have other questions
           <a href="mailto: sonnynomnom@gmail.com">here</a>.
         </p>
-      </div>
+      </section>
 
       <script>
         var coll = document.getElementsByClassName('collapsible');
