--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@ if (location.protocol != 'https:') {
       </nav>
     </header>
 
-    <main>
+    <main class="layout layout__fluid">
       <section class="hero" id="hero">
         <div class="hero-bg"></div>
         <div class="hero-images">
@@ -210,7 +210,7 @@ if (location.protocol != 'https:') {
             </p>
           </div>
           <div class="join-form" id="now">
-            <h2>JOIN A ROOM (FREE)</h2>
+            <h2 class="text__center">JOIN A ROOM (FREE)</h2>
             <form action="/scene.html" method="GET">
               <div>
                 <input
@@ -272,7 +272,7 @@ if (location.protocol != 'https:') {
 
       <section id="options" class="options-container">
         <div class="section--content options-content">
-          <h2>Karaoke with your friends...</h2>
+          <h2 class="text__center">Karaoke with your friends...</h2>
           <div class="options-grid">
             <div class="options--visual">
               <img
@@ -301,7 +301,7 @@ if (location.protocol != 'https:') {
       </section>
 
       <section id="steps" class="section--content">
-        <h2>How it works:</h2>
+        <h2 class="text__center">How it works:</h2>
         <ol class="steps">
           <li class="steps-step">
             <div class="steps--visual">
@@ -368,7 +368,7 @@ if (location.protocol != 'https:') {
 
       <!-- Newsletter (Sonny) -->
       <section id="newsletter" class="newsletter section--content">
-        <h2>Keep up with the party!</h2>
+        <h2 class="text__center">Keep up with the party!</h2>
         <p class="newsletter--description">
           Join our newsletter to get Karaoke Nite updates from our team.
         </p>
