--- a/public/blog.html
+++ b/public/blog.html
@@ -196,7 +196,7 @@
 
           <p>Because of you, we hit a new milestone! Let's gooo.</p>
 
-          <ul>
+          <ul class="list">
             <li><b>Users:</b> 2,500</li>
             <li><b>Sessions:</b> 3,800</li>
           </ul>
@@ -229,7 +229,7 @@
             calls:
           </p>
 
-          <ul>
+          <ul class="list">
             <li>
               <a
                 class="link"
@@ -392,43 +392,33 @@
       <section class="layout-grid layout-grid__sm">
         <article>
           <h4>Release Build v0.1.3</h4>
-          <ul class="emojilist">
-            <li class="emojilist-item">🆕 Added a /faq page.</li>
-            <li class="emojilist-item">🏗 Updated /about page.</li>
-            <li class="emojilist-item">
-              🏗 Cleaned up the codebase in preparation of v0.2.
-            </li>
-            <li class="emojilist-item">💸 Compiled the pre-seed pitch deck.</li>
+          <ul class="list list__dense">
+            <li>🆕 Added a /faq page.</li>
+            <li>🏗 Updated /about page.</li>
+            <li>🏗 Cleaned up the codebase in preparation of v0.2.</li>
+            <li>💸 Compiled the pre-seed pitch deck.</li>
           </ul>
         </article>
         <article>
           <h4>Release Build v0.1.2</h4>
-          <ul class="emojilist">
-            <li class="emojilist-item">
-              🆕 Added a Privacy Policy. Thanks, Min-Kyu!
-            </li>
-            <li class="emojilist-item">🆕 Added demo video.</li>
-            <li class="emojilist-item">🆕 Added release notes.</li>
-            <li class="emojilist-item">🆕 Added blog posts.</li>
-            <li class="emojilist-item">🏗 Removed Patreon links.</li>
-            <li class="emojilist-item">
-              🐛 Fixed the "Let's Get It On" autoplay bug.
-            </li>
+          <ul class="list list__dense">
+            <li>🆕 Added a Privacy Policy. Thanks, Min-Kyu!</li>
+            <li>🆕 Added demo video.</li>
+            <li>🆕 Added release notes.</li>
+            <li>🆕 Added blog posts.</li>
+            <li>🏗 Removed Patreon links.</li>
+            <li>🐛 Fixed the "Let's Get It On" autoplay bug.</li>
           </ul>
         </article>
         <article>
           <h4>Release Build v0.1.1</h4>
-          <ul class="emojilist">
-            <li class="emojilist-item">
+          <ul class="list list__dense">
+            <li>
               🆕 Added floating animation to the stars on the landing page.
             </li>
-            <li class="emojilist-item">
-              🆕 Added hover effects to anchor links.
-            </li>
-            <li class="emojilist-item">🆕 Added a /blog page.</li>
-            <li class="emojilist-item">
-              🐛 Fixed social channel links bug in the footer.
-            </li>
+            <li>🆕 Added hover effects to anchor links.</li>
+            <li>🆕 Added a /blog page.</li>
+            <li>🐛 Fixed social channel links bug in the footer.</li>
           </ul>
         </article>
       </section>
