--- a/public/faq.html
+++ b/public/faq.html
@@ -168,7 +168,7 @@
 
             <p>Here are some microphones that we recommend:</p>
 
-            <ul>
+            <ul class="list">
               <li>
                 $49.99
                 <a
@@ -205,7 +205,7 @@
           </button>
           <div class="collapse-content content">
             <p>You can do this in three simple steps:</p>
-            <ol>
+            <ol class="list">
               <li>Charge the microphone unit or make sure there's battery.</li>
               <li>
                 Plug the other end of the cable into computer USB port or AUX
@@ -234,7 +234,7 @@
 
           <div class="collapse-content content">
             <p>Windows users:</p>
-            <ol>
+            <ol class="list">
               <li>Click on "Spearkers" in the taskbar.</li>
               <li>
                 Click on "Sound" and make sure your microphone is set as the
@@ -245,7 +245,7 @@
             </ol>
 
             <p>Mac users:</p>
-            <ol>
+            <ol class="list">
               <li>Open QuickTime Player.</li>
               <li>Click "File" ➡ "New Audio Recording".</li>
               <li>
@@ -263,43 +263,31 @@
           <div class="content collapse-content">
             <h3>v0.2 is currently in production! Scoped to launch in May.</h3>
             <h4>Release Build v0.1.3</h4>
-            <ul class="emojilist">
-              <li class="emojilist-item">🆕 Added a /faq page.</li>
-              <li class="emojilist-item">🏗 Updated /about page.</li>
-              <li class="emojilist-item">
-                🏗 Cleaned up the codebase in preparation of v0.2.
-              </li>
-              <li class="emojilist-item">
-                💸 Compiled the pre-seed pitch deck.
-              </li>
+            <ul class="list list__dense">
+              <li>🆕 Added a /faq page.</li>
+              <li>🏗 Updated /about page.</li>
+              <li>🏗 Cleaned up the codebase in preparation of v0.2.</li>
+              <li>💸 Compiled the pre-seed pitch deck.</li>
             </ul>
 
             <h4>Release Build v0.1.2</h4>
-            <ul class="emojilist">
-              <li class="emojilist-item">
-                🆕 Added a Privacy Policy. Thanks, Min-Kyu!
-              </li>
-              <li class="emojilist-item">🆕 Added demo video.</li>
-              <li class="emojilist-item">🆕 Added release notes.</li>
-              <li class="emojilist-item">🆕 Added blog posts.</li>
-              <li class="emojilist-item">🏗 Removed Patreon links.</li>
-              <li class="emojilist-item">
-                🐛 Fixed the "Let's Get It On" autoplay bug.
-              </li>
+            <ul class="list list__dense">
+              <li>🆕 Added a Privacy Policy. Thanks, Min-Kyu!</li>
+              <li>🆕 Added demo video.</li>
+              <li>🆕 Added release notes.</li>
+              <li>🆕 Added blog posts.</li>
+              <li>🏗 Removed Patreon links.</li>
+              <li>🐛 Fixed the "Let's Get It On" autoplay bug.</li>
             </ul>
 
             <h4>Release Build v0.1.1</h4>
-            <ul class="emojilist">
-              <li class="emojilist-item">
+            <ul class="list list__dense">
+              <li>
                 🆕 Added floating animation to the stars on the landing page.
               </li>
-              <li class="emojilist-item">
-                🆕 Added hover effects to anchor links.
-              </li>
-              <li class="emojilist-item">🆕 Added a /blog page.</li>
-              <li class="emojilist-item">
-                🐛 Fixed social channel links bug in the footer.
-              </li>
+              <li>🆕 Added hover effects to anchor links.</li>
+              <li>🆕 Added a /blog page.</li>
+              <li>🐛 Fixed social channel links bug in the footer.</li>
             </ul>
           </div>
         </div>
