--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,7 @@ if (location.protocol != 'https:') {
                 value="Enter Room"
               />
 
-              <div id="radio-buttons-testing">
+              <div class="text__left" id="radio-buttons-testing">
                 <label for="hosting" class="custom-radios-hosting-joining">
                   <input
                     type="radio"
