--- a/public/blog.html
+++ b/public/blog.html
@@ -128,7 +128,7 @@
     <header role="banner" class="header">
       <nav class="header-nav">
         <div class="header-navlogo">
-          <a class="header-navlink__home" href="https://karaokenite.co">
+          <a class="header-navlink__home" href="/">
             <h1 class="brand-logo">
               KARAOKE NITE
               <span class="brand-betatag">beta</span>
