--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@ if (location.protocol != 'https:') {
 </script>
 -->
 
-  <body id="home" class="dark-bg">
+  <body id="home" class="dark">
     <div>
       <a
         href="https://github.com/karaokenite"
