--- a/public/blog.html
+++ b/public/blog.html
@@ -43,7 +43,7 @@
       rel="icon"
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
-
+    <link href="/styles/vendor.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
     <link href="/styles/blog.css" rel="stylesheet" type="text/css" />
 
