--- a/public/about.html
+++ b/public/about.html
@@ -203,6 +203,7 @@
             features and goodies coming soon so stay tuned. In the meantime,
             please help us make the experience better by answering a quick
             <a
+              class="link"
               href="https://karaokenite.typeform.com/to/SaHxnvyT"
               target="_blank"
               >feedback survey</a
@@ -241,6 +242,7 @@
           <p>
             Privacy Policy can be found
             <a
+              class="link"
               href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FPrivacy%20Policy%20v1.pdf?v=1616300368184"
               target="_blank"
               >here</a
