--- a/public/blog.html
+++ b/public/blog.html
@@ -143,7 +143,7 @@
                 </span>
               </a>
             </li>
-            <li class="navbar-item ">
+            <li class="navbar-item">
               <a href="blog.html" class="navbar-link navbar-link__active">
                 Blog
                 <span class="navbar-linkIcon">
@@ -185,6 +185,7 @@
           <p>
             P.S. Take a look here for a
             <a
+              class="link"
               href="https://twitter.com/karaoke_nite/status/1369729297779486726?s=20"
               target="_blank"
               >sneak peak</a
