Add class="link" for a few links

--- a/public/about.html
+++ b/public/about.html
@@ -214,7 +214,12 @@
             Karaoke Nite is also open-sourced. If you are a programmer,
             designer, 3d modeler, or game artist, you can find the project on
             our
-            <a href="https://github.com/karaokenite" target="_blank">GitHub</a>.
+            <a
+              class="link"
+              href="https://github.com/karaokenite"
+              target="_blank"
+              >GitHub</a
+            >.
           </p>
         </article>
 
@@ -224,7 +229,7 @@
             If you are a indie record label or band/artist that's interested in
             having your music videos or lyric videos be featured in the app,
             please let us know via
-            <a href="mailto: sonnynomnom@gmail.com">email</a>.
+            <a class="link" href="mailto: sonnynomnom@gmail.com">email</a>.
           </p>
         </article>
         <article>
