--- a/public/faq.html
+++ b/public/faq.html
@@ -308,7 +308,7 @@
       <section>
         <p>
           Let us know if you have other questions
-          <a href="mailto: sonnynomnom@gmail.com">here</a>.
+          <a class="link" href="mailto: sonnynomnom@gmail.com">here</a>.
         </p>
       </section>
 
