--- a/public/index.html
+++ b/public/index.html
@@ -288,31 +288,33 @@ if (location.protocol != 'https:') {
       </section>
 
       <section id="options" class="options-container">
-        <div class="section--content options-content section__wide">
-          <h2 class="page-subtitle text__center">
-            Karaoke with your friends...
-          </h2>
-          <div class="options-grid">
-            <div class="options--visual">
-              <img
-                alt="Placeholder2"
-                id="browser"
-                src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FLaptop.svg?v=1591917657224"
-              />
-              <label for="browser" class="options--description"
-                >In the browser</label
-              >
-            </div>
-            <span class="options--or">OR</span>
-            <div class="options--visual">
-              <img
-                alt="Placeholder3"
-                id="headset"
-                src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FVR.svg?v=1591917657319"
-              />
-              <label for="headset" class="options--description"
-                >With a VR headset</label
-              >
+        <div class="options-diagonal">
+          <div class="section--content options-content section__wide">
+            <h2 class="page-subtitle text__center">
+              Karaoke with your friends...
+            </h2>
+            <div class="options-grid">
+              <div class="options--visual">
+                <img
+                  alt="Placeholder2"
+                  id="browser"
+                  src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FLaptop.svg?v=1591917657224"
+                />
+                <label for="browser" class="options--description"
+                  >In the browser</label
+                >
+              </div>
+              <span class="options--or">OR</span>
+              <div class="options--visual">
+                <img
+                  alt="Placeholder3"
+                  id="headset"
+                  src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FVR.svg?v=1591917657319"
+                />
+                <label for="headset" class="options--description"
+                  >With a VR headset</label
+                >
+              </div>
             </div>
           </div>
         </div>
