--- a/public/blog.html
+++ b/public/blog.html
@@ -126,8 +126,21 @@
             </h1>
           </a>
           <button class="navbar-toggle">
-            <svg width="24" height="24" viewBox="0 0 24 24">
+            <svg
+              class="navbar-toggleIcon navbar-toggleIcon__open"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
               <use href="#menu" />
+            </svg>
+            <svg
+              class="navbar-toggleIcon navbar-toggleIcon__close"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
+              <use href="#close" />
             </svg>
           </button>
         </div>
@@ -512,7 +525,8 @@
         </div>
       </div>
     </footer>
-    <svg height="0" width="0" style="display: none">
+      <svg height="0" width="0" style="display: none">
+
       <defs>
         <symbol id="arrow">
           <path
@@ -530,7 +544,16 @@
             fill="currentColor"
           />
         </symbol>
+        <symbol id="close">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M0.292893 0.292893C0.683417 -0.0976311 1.31658 -0.0976311 1.70711 0.292893L7 5.58579L12.2929 0.292893C12.6834 -0.0976311 13.3166 -0.0976311 13.7071 0.292893C14.0976 0.683417 14.0976 1.31658 13.7071 1.70711L8.41421 7L13.7071 12.2929C14.0976 12.6834 14.0976 13.3166 13.7071 13.7071C13.3166 14.0976 12.6834 14.0976 12.2929 13.7071L7 8.41421L1.70711 13.7071C1.31658 14.0976 0.683417 14.0976 0.292893 13.7071C-0.0976311 13.3166 -0.0976311 12.6834 0.292893 12.2929L5.58579 7L0.292893 1.70711C-0.0976311 1.31658 -0.0976311 0.683417 0.292893 0.292893Z"
+            fill="currentColor"
+          />
+        </symbol>
       </defs>
+    </svg>
     </svg>
   </body>
 </html>
